<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">audio UP</string>
    <string name="alert_preferences">Alert Preference</string>
    <string name="bass_booster">Bass Booster</string>
    <string name="equalizer">Equalizer</string>
    <string name="edit">Edit</string>
    <string name="never_forget_alert">Never Forget Alert</string>
    <string name="audio_prompt">Audio Prompt</string>
    <string name="find_headset">Find Headset</string>
    <string name="battery_capacity">Battery Capacity</string>
    <string name="paired_model">Paired Model</string>
    <string name="model_1">UA-28SE-V</string>
    <string name="new_model">New Model</string>
    <string name="pairing_note">Press and hold the MFB until the blue and red LED flashing</string>
    <string name="login_signup">Login/Sign Up</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="reset">Reset</string>
    <string name="update_center">Update Center</string>
    <string name="about">About</string>
    <string name="all_push_notifications">All Push Notifications</string>
    <string name="battery">Battery</string>
    <string name="activity_and_promotions">Activity and Promotions</string>
    <string name="reset_note">You need to re-pair and re-connect after reset the device.</string>
    <string name="firmware_update">Firmware Update</string>
    <string name="app_update">App Update</string>
    <string name="check_for_update">Check now for update</string>
    <string name="check_auto">Auto Check</string>
    <string name="auto_install">Auto Update</string>
    <string name="ix_change_up">audio UP</string>
    <string name="copyrights">"Copyright \u00a9 1994-2019"</string>
    <string name="company_address">Channel Enterprises (HK) Ltd.</string>
    <string name="rights_reserved">All rights reserved.</string>
    <string name="version">v. 1.00.0</string>
    <string name="contact_us">Contact Us</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Contact no.</string>
    <string name="confrm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="forget_password_note">Please enter your registered email, and we will send you an email for password resetting</string>
    <string name="submit">Submit</string>
    <string name="change_password">Change Password</string>
    <string name="warranty_record">Warranty Record</string>
    <string name="share">Share to Facebook</string>
    <string name="signout">Sign Out K</string>
    <string name="change_password_note">Please fill in the form to modify your password.</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="one_year_warranty">You can enjoy 1 year limited warranty for all audio device.</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="model">Model</string>
    <string name="add_model">Add Model</string>
    <string name="example_uuid">XX:XX:XX:XXXX</string>
    <string name="alert_preferences_note">Incoming call alert, out of range alert and LED notification.</string>
    <string name="buzzer">Buzzer</string>
    <string name="vibration">Vibration</string>
    <string name="_3d">3D</string>
    <string name="normal">Normal</string>
    <string name="dance">Dance</string>
    <string name="flat">Flat</string>
    <string name="folk">Folk</string>
    <string name="heavy_metal">Heavy Metal</string>
    <string name="hip_hop">Hip Hop</string>
    <string name="jazz">Jazz</string>
    <string name="pop">Pop</string>
    <string name="rock">Rock</string>
    <string name="save">Save</string>
    <string name="set_range">Set a range to give alert</string>
    <string name="mobile">Mobile</string>
    <string name="headset">Headset</string>
    <string name="far">Far</string>
    <string name="near">Near</string>
    <string name="audio_prompt_note">Said \"yes\" for answering the call</string>
    <string name="find_the_headset">Find the Headset</string>
    <string name="find_headset_note">Ensure the alert function is ON</string>
    <string name="tap_to_stop">Tap to Stop</string>
    <string name="talk_time">Talk Time</string>
    <string name="music_time">Music Time</string>
    <string name="no_paired_device">No paired device found.</string>
    <string-array name="com_google_android_gms_fonts_certs_dev">
        <item>
            MIIEqDCCA5CgAwIBAgIJANWFuGx90071MA0GCSqGSIb3DQEBBAUAMIGUMQswCQYDVQQGEwJVUzETMBEGA1UECBMKQ2FsaWZvcm5pYTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEQMA4GA1UEChMHQW5kcm9pZDEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDEiMCAGCSqGSIb3DQEJARYTYW5kcm9pZEBhbmRyb2lkLmNvbTAeFw0wODA0MTUyMzM2NTZaFw0zNTA5MDEyMzM2NTZaMIGUMQswCQYDVQQGEwJVUzETMBEGA1UECBMKQ2FsaWZvcm5pYTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEQMA4GA1UEChMHQW5kcm9pZDEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDEiMCAGCSqGSIb3DQEJARYTYW5kcm9pZEBhbmRyb2lkLmNvbTCCASAwDQYJKoZIhvcNAQEBBQADggENADCCAQgCggEBANbOLggKv+IxTdGNs8/TGFy0PTP6DHThvbbR24kT9ixcOd9W+EaBPWW+wPPKQmsHxajtWjmQwWfna8mZuSeJS48LIgAZlKkpFeVyxW0qMBujb8X8ETrWy550NaFtI6t9+u7hZeTfHwqNvacKhp1RbE6dBRGWynwMVX8XW8N1+UjFaq6GCJukT4qmpN2afb8sCjUigq0GuMwYXrFVee74bQgLHWGJwPmvmLHC69EH6kWr22ijx4OKXlSIx2xT1AsSHee70w5iDBiK4aph27yH3TxkXy9V89TDdexAcKk/cVHYNnDBapcavl7y0RiQ4biu8ymM8Ga/nmzhRKya6G0cGw8CAQOjgfwwgfkwHQYDVR0OBBYEFI0cxb6VTEM8YYY6FbBMvAPyT+CyMIHJBgNVHSMEgcEwgb6AFI0cxb6VTEM8YYY6FbBMvAPyT+CyoYGapIGXMIGUMQswCQYDVQQGEwJVUzETMBEGA1UECBMKQ2FsaWZvcm5pYTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEQMA4GA1UEChMHQW5kcm9pZDEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDEiMCAGCSqGSIb3DQEJARYTYW5kcm9pZEBhbmRyb2lkLmNvbYIJANWFuGx90071MAwGA1UdEwQFMAMBAf8wDQYJKoZIhvcNAQEEBQADggEBABnTDPEF+3iSP0wNfdIjIz1AlnrPzgAIHVvXxunW7SBrDhEglQZBbKJEk5kT0mtKoOD1JMrSu1xuTKEBahWRbqHsXclaXjoBADb0kkjVEJu/Lh5hgYZnOjvlba8Ld7HCKePCVePoTJBdI4fvugnL8TsgK05aIskyY0hKI9L8KfqfGTl1lzOv2KoWD0KWwtAWPoGChZxmQ+nBli+gwYMzM1vAkP+aayLe0a1EQimlOalO762r0GXO0ks+UeXde2Z4e+8S/pf7pITEI/tP+MxJTALw9QUWEv9lKTk+jkbqxbsh8nfBUapfKqYn0eidpwq2AzVp3juYl7//fKnaPhJD9gs=
        </item>
    </string-array>
    <string-array name="com_google_android_gms_fonts_certs_prod">
        <item>
            MIIEQzCCAyugAwIBAgIJAMLgh0ZkSjCNMA0GCSqGSIb3DQEBBAUAMHQxCzAJBgNVBAYTAlVTMRMwEQYDVQQIEwpDYWxpZm9ybmlhMRYwFAYDVQQHEw1Nb3VudGFpbiBWaWV3MRQwEgYDVQQKEwtHb29nbGUgSW5jLjEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDAeFw0wODA4MjEyMzEzMzRaFw0zNjAxMDcyMzEzMzRaMHQxCzAJBgNVBAYTAlVTMRMwEQYDVQQIEwpDYWxpZm9ybmlhMRYwFAYDVQQHEw1Nb3VudGFpbiBWaWV3MRQwEgYDVQQKEwtHb29nbGUgSW5jLjEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDCCASAwDQYJKoZIhvcNAQEBBQADggENADCCAQgCggEBAKtWLgDYO6IIrgqWbxJOKdoR8qtW0I9Y4sypEwPpt1TTcvZApxsdyxMJZ2JORland2qSGT2y5b+3JKkedxiLDmpHpDsz2WCbdxgxRczfey5YZnTJ4VZbH0xqWVW/8lGmPav5xVwnIiJS6HXk+BVKZF+JcWjAsb/GEuq/eFdpuzSqeYTcfi6idkyugwfYwXFU1+5fZKUaRKYCwkkFQVfcAs1fXA5V+++FGfvjJ/CxURaSxaBvGdGDhfXE28LWuT9ozCl5xw4Yq5OGazvV24mZVSoOO0yZ31j7kYvtwYK6NeADwbSxDdJEqO4k//0zOHKrUiGYXtqw/A0LFFtqoZKFjnkCAQOjgdkwgdYwHQYDVR0OBBYEFMd9jMIhF1Ylmn/Tgt9r45jk14alMIGmBgNVHSMEgZ4wgZuAFMd9jMIhF1Ylmn/Tgt9r45jk14aloXikdjB0MQswCQYDVQQGEwJVUzETMBEGA1UECBMKQ2FsaWZvcm5pYTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEUMBIGA1UEChMLR29vZ2xlIEluYy4xEDAOBgNVBAsTB0FuZHJvaWQxEDAOBgNVBAMTB0FuZHJvaWSCCQDC4IdGZEowjTAMBgNVHRMEBTADAQH/MA0GCSqGSIb3DQEBBAUAA4IBAQBt0lLO74UwLDYKqs6Tm8/yzKkEu116FmH4rkaymUIE0P9KaMftGlMexFlaYjzmB2OxZyl6euNXEsQH8gjwyxCUKRJNexBiGcCEyj6z+a1fuHHvkiaai+KL8W1EyNmgjmyy8AW7P+LLlkR+ho5zEHatRbM/YAnqGcFh5iZBqpknHf1SKMXFh4dd239FJ1jWYfbMDMy3NS5CTMQ2XFI1MvcyUTdZPErjQfTbQe3aDQsQcafEQPD+nqActifKZ0Np0IS9L9kR/wbNvyz6ENwPiTrjV2KRkEjH78ZMcUQXg0L3BYHJ3lc69Vs5Ddf9uUGGMYldX3WfMBEmh/9iFBDAaTCK
        </item>
    </string-array>
    <string name="empty_content_description" />
    <string name="button_ok">OK</string>
    <string name="button_connect">CONNECT</string>
    <string name="button_connect_ble">CONNECT BLE</string>
    <string name="button_connect_br_edr">CONNECT BR/EDR</string>
    <string name="button_disconnect">DISCONNECT</string>
    <string name="button_start_upgrade">START UPGRADE</string>
    <string name="button_previous">PREVIOUS</string>
    <string name="button_abort">ABORT</string>
    <string name="button_continue">CONTINUE</string>
    <string name="button_reset">RESET</string>
    <string name="button_choose">CHOOSE</string>
    <string name="button_confirm">CONFIRM</string>
    <string name="alert_permissions_title">Permissions required</string>
    <string name="alert_permissions_message">Please enable Location permission which is required to scan for
        LE devices.</string>
    <string name="alert_no_file_selected_title">No available file</string>
    <string name="alert_no_file_selected_message">There is no file selected or the selected file cannot be retrieved.
        <br />Please choose another file.</string>
    <string name="alert_not_a_bin_file_title">Not a bin file</string>
    <string name="alert_not_a_bin_file_message">The selected file is not a bin file. This application only supports
        using a bin file for the upgrade.<br />Please choose another file.</string>
    <string name="alert_file_error_title">File error</string>
    <string name="alert_file_error_message">Error when attempting to retrieve the selected file. Please try
        again or select another one.</string>
    <string name="alert_reconnection_title">Device disconnected</string>
    <string name="alert_reconnection_message">Waiting for reconnection</string>
    <string name="alert_upgrade_complete_title">Upgrade complete</string>
    <string name="alert_upgrade_complete_message">The upgrade has successfully completed.</string>
    <string name="alert_upgrade_low_battery_message">The battery is low on your audio device. Please connect it to a charger.</string>
    <string name="alert_upgrade_low_battery_title">Low battery</string>
    <string name="alert_upgrade_commit_message">The data has been uploaded on the board and the board is ready for
        the commit process. Do you want to commit your upload?</string>
    <string name="alert_upgrade_commit_title">Data commit</string>
    <string name="alert_upgrade_transfer_complete_message">Would you like to proceed?</string>
    <string name="alert_upgrade_transfer_complete_title">File transfer complete</string>
    <string name="alert_upgrade_sync_id_different_message">A previous unfinished upgrade has been processed with a
        different file. By continuing the current upgrade the device will loose all information from that
        previous upgrade.<br />Do you want to continue?</string>
    <string name="alert_upgrade_sync_id_different_title">File transfer complete</string>
    <string name="toast_not_implemented">Not implemented yet</string>
    <string name="toast_gaia_not_supported">Gaia service not supported</string>
    <string name="toast_not_connected">Device not connected</string>
    <string name="toast_connection_error_failed">Connection has failed</string>
    <string name="toast_connection_error_lost">Connection with device is lost</string>
    <string name="toast_connection_error_unknown">Connection unknown error</string>
    <string name="snack_bar_connected"> Device connected</string>
    <string name="snack_bar_connecting">Connecting to device…</string>
    <string name="snack_bar_disconnecting">Disconnecting from device…</string>
    <string name="snack_bar_disconnected">Device disconnected</string>
    <string name="snack_bar_bonded">Devices are bonded</string>
    <string name="snack_bar_bonding"> Bonding with device…</string>
    <string name="snack_bar_not_bonded">Devices are not bonded</string>
</resources>