<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeBlack"
    android:orientation="vertical"
    tools:context=".activities.ChangePassword">

    <include android:layout="@layout/toolbar_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/_18font"
        android:fontFamily="@font/roboto"
        android:textAlignment="center"
        android:layout_margin="@dimen/_24dp"
        android:text="@string/change_password_note"/>

    <EditText
        android:id="@+id/et_change_password_current"
        android:layout_width="@dimen/et_width"
        android:layout_height="@dimen/et_height"
        android:layout_gravity="center"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/_12dp"
        android:drawableLeft="@drawable/ic_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_8dp"
        android:drawablePadding="@dimen/_8dp"
        android:fontFamily="@font/roboto"
        android:maxLines="1"
        android:textSize="@dimen/_18font"
        android:drawableTint="@color/themeGray"
        android:hint="@string/current_password" />

    <EditText
        android:id="@+id/et_change_password_new_password"
        android:layout_width="@dimen/et_width"
        android:layout_height="@dimen/et_height"
        android:layout_gravity="center"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/_12dp"
        android:drawableLeft="@drawable/ic_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_8dp"
        android:drawablePadding="@dimen/_8dp"
        android:fontFamily="@font/roboto"
        android:maxLines="1"
        android:textSize="@dimen/_18font"
        android:drawableTint="@color/themeGray"
        android:hint="@string/new_password" />

    <EditText
        android:id="@+id/et_change_password_confirm_password"
        android:layout_width="@dimen/et_width"
        android:layout_height="@dimen/et_height"
        android:layout_gravity="center"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_8dp"
        android:drawablePadding="@dimen/_8dp"
        android:fontFamily="@font/roboto"
        android:maxLines="1"
        android:textSize="@dimen/_18font"
        android:drawableTint="@color/themeGray"
        android:hint="@string/confrm_password" />

    <Button
        android:id="@+id/btn_change_password_submit"
        android:layout_width="@dimen/et_width"
        android:layout_height="@dimen/et_height"
        android:layout_marginTop="@dimen/_24dp"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto"
        android:layout_marginBottom="@dimen/_12dp"
        android:background="@drawable/button_style"
        android:text="@string/submit"/>

</LinearLayout>