<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/themeBlack"
    tools:context=".activities.Login">

    <include layout="@layout/toolbar_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_164dp"
                android:layout_height="@dimen/_164dp"
                android:layout_gravity="center"
                android:src="@drawable/logo"
                android:layout_margin="@dimen/_24dp"/>

            <EditText
                android:id="@+id/et_signup_name"
                android:layout_width="@dimen/et_width"
                android:layout_height="@dimen/et_height"
                android:layout_gravity="center"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_person"
                android:inputType="text"
                android:layout_marginBottom="@dimen/_12dp"
                android:paddingStart="@dimen/_8dp"
                android:maxLines="1"
                android:drawablePadding="@dimen/_8dp"
                android:fontFamily="@font/roboto"
                android:textSize="@dimen/_18font"
                android:drawableTint="@color/themeGray"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/et_signup_email"
                android:layout_width="@dimen/et_width"
                android:layout_height="@dimen/et_height"
                android:layout_gravity="center"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_email"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="@dimen/_12dp"
                android:paddingStart="@dimen/_8dp"
                android:maxLines="1"
                android:drawablePadding="@dimen/_8dp"
                android:fontFamily="@font/roboto"
                android:textSize="@dimen/_18font"
                android:drawableTint="@color/themeGray"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/et_signup_address"
                android:layout_width="@dimen/et_width"
                android:layout_height="@dimen/et_height"
                android:layout_gravity="center"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_location"
                android:inputType="text"
                android:layout_marginBottom="@dimen/_12dp"
                android:paddingStart="@dimen/_8dp"
                android:maxLines="1"
                android:drawablePadding="@dimen/_8dp"
                android:fontFamily="@font/roboto"
                android:textSize="@dimen/_18font"
                android:drawableTint="@color/themeGray"
                android:hint="@string/address" />

            <EditText
                android:id="@+id/et_signup_number"
                android:layout_width="@dimen/et_width"
                android:layout_height="@dimen/et_height"
                android:layout_gravity="center"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_phone"
                android:inputType="phone"
                android:layout_marginBottom="@dimen/_12dp"
                android:paddingStart="@dimen/_8dp"
                android:maxLines="1"
                android:drawablePadding="@dimen/_8dp"
                android:fontFamily="@font/roboto"
                android:textSize="@dimen/_18font"
                android:drawableTint="@color/themeGray"
                android:hint="@string/phone" />

            <EditText
                android:id="@+id/et_signup_password"
                android:layout_width="@dimen/et_width"
                android:layout_height="@dimen/et_height"
                android:layout_gravity="center"
                android:background="@color/white"
                android:layout_marginBottom="@dimen/_12dp"
                android:drawableLeft="@drawable/ic_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_8dp"
                android:drawablePadding="@dimen/_8dp"
                android:fontFamily="@font/roboto"
                android:maxLines="1"
                android:textSize="@dimen/_18font"
                android:drawableTint="@color/themeGray"
                android:hint="@string/password" />

            <EditText
                android:id="@+id/et_signup_conf_password"
                android:layout_width="@dimen/et_width"
                android:layout_height="@dimen/et_height"
                android:layout_gravity="center"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_8dp"
                android:drawablePadding="@dimen/_8dp"
                android:fontFamily="@font/roboto"
                android:maxLines="1"
                android:textSize="@dimen/_18font"
                android:drawableTint="@color/themeGray"
                android:hint="@string/confrm_password" />

            <Button
                android:id="@+id/btn_signup_confirm"
                android:layout_width="@dimen/et_width"
                android:layout_height="@dimen/et_height"
                android:layout_marginTop="@dimen/_24dp"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:layout_marginBottom="@dimen/_12dp"
                android:background="@drawable/button_style"
                android:text="@string/confirm"/>

        </LinearLayout>
    </ScrollView>



</LinearLayout>