<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/themeBlack"
    tools:context=".activities.ForgetPassword">

    <include layout="@layout/toolbar_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:orientation="vertical"
        android:layout_margin="@dimen/_12dp"
        android:background="@color/themeGray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:textSize="@dimen/_18font"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/forget_password_note"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/_12dp"
        android:layout_marginRight="@dimen/_12dp"
        android:layout_marginBottom="@dimen/_12dp"
        android:background="@color/themeGray">


        <EditText
            android:id="@+id/et_forget_password_email"
            android:layout_width="@dimen/et_width"
            android:layout_height="@dimen/et_height"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/_28dp"
            android:layout_marginBottom="@dimen/_12dp"
            android:paddingStart="@dimen/_8dp"
            android:maxLines="1"
            android:layout_centerHorizontal="true"
            android:drawablePadding="@dimen/_8dp"
            android:fontFamily="@font/roboto"
            android:textSize="@dimen/_18font"
            android:drawableTint="@color/themeGray"
            android:hint="@string/email" />

        <Button
            android:id="@+id/btn_submit_forget_password_req"
            android:layout_width="@dimen/et_width"
            android:layout_height="@dimen/et_height"
            android:layout_marginTop="@dimen/_28dp"
            android:fontFamily="@font/roboto"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_24dp"
            android:background="@drawable/button_style"
            android:text="@string/submit"/>

    </RelativeLayout>

</LinearLayout>